[package]
version = "0.1.0"
name = "seekpool"
repository = "https://github.com/MartinKavik/kavik.cz"
authors = ["Seekchain Seekchain <martin@seekchain>"]
description = "Seekchain"
categories = ["wasm", "rust", "tailwindcss", "seed", "personal", "website"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "^0.2.50" # sync with `wasm-bindgen`

[dependencies]
wasm-bindgen = "^0.2.50" # sync with `wasm-bindgen-test`
seed = "0.5.0"
fixed-vec-deque = "0.1.8"
serde = { version = "^1.0.92" }
futures = "^0.1.27"
ethereum-types = "0.8.0"
toml = "0.4.5"


[dependencies.web-sys]
version = "0.3.27"
features = [
    "ScrollToOptions",
    "Navigator",
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
]



[profile.release]
lto = true
opt-level = 's'
